# aws_hcls_table6

./: HexTract_Pitch_Deck.pptx  PharmaExtract_Pitch_Deck.pptx  spec.md
bmr-digitization-pipeline/: pyproject.toml  run_handwritten.py  run_handwritten_bedrock.py  run_sample.py  run_test_data.py
bmr-digitization-pipeline/.hypothesis/constants/: 10daf5a1803752ae  15f998fddd6c37c7  2d7ca5a0f7d31ecb  375e996620efe363  3de5735f2769d9b2  3e82ec3f36e42836  42577588328990a5  491b9127715c5b2b  495022fa95338713  4a4a8a85179b27a7  5dd98a164720f0a9  65f154da2c2631aa  67b0a8ccf18bf5d2  70c2241423f14e15  7a386f445fb492a0  8299b467f5199d63  858937c05af22b4b  8630c1c81f6d8b64  87fedeaf657dd9dc  8cedf131d0b8e622  8d6a0273c60ee1b3  92783bc360eda17d  a338c89124fd60eb  a4b07a753e8674d9  a92ce04e6e466e31  aad1f427b8981530  afd1e78407c8c9a8  b51812b76ece7fcd  b829c330a2517282  b9a3f3d74be02c5e  bc68bdabf504cb30  c1972d215d132a73  c443a1cd4ca27b28  c782af2d3d8a2b84  ec90578b087ca418  ef461993e796a44a
bmr-digitization-pipeline/data/: generate_synthetic.py
bmr-digitization-pipeline/src/bmr_digitization_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bmr-digitization-pipeline/src/bmr_pipeline/: __init__.py  assembler.py  bedrock_extraction.py  bedrock_scoring.py  config.py  extraction.py  feedback.py  (+6 more)
bmr-digitization-pipeline/tests/: test_assembler.py  test_extraction.py  test_feedback.py  test_input_validator.py  test_integration.py  test_models.py  test_orchestrator.py  test_queue.py  test_record_store.py  test_scoring.py
bmr-digitization-pipeline/ui/: app.py
(+23 files in other folders)
